# CryptoChannel

./: README.md
crypto_channel/: Cargo.toml
crypto_channel/src/: encryption.rs  key_exchange.rs  main.rs
crypto_channel/src/modules/: config.rs  encryption.rs  key_exchange.rs  key_store.rs  key_store_classes.rs  lib.rs  prompt.rs
crypto_channel/tests/: encryption_test.rs  key_generation_test.rs  storage_test.rs
