[package]
name = "crypto_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = { version = "2.0.0-rc.2", features = ["static_secrets"] }
ed25519-dalek = "2.0.0-rc.2"
base64 = "0.21.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
