[package]
name = "crypto_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
arboard = "3.2.0"
base64 = "0.21.2"
ed25519-dalek = "2.0.0-rc.2"
hex-literal = "0.4.1"
hkdf = "0.12.3"
inquire = { version = "0.6.2", features = [] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.6"
x25519-dalek = { version = "2.0.0-rc.2", features = ["static_secrets"] }
